@@ -8,8 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-import com.google.common.collect.ImmutableList;
-
 public class TestLanguageTagValueAnnotation
 {
     @AllArgsConstructor
@@ -36,33 +34,25 @@ public class TestLanguageTagValueAnnotation
     @DataProvider(name = "acceptableValues")
     public Object[][] createAcceptableValues()
     {
-        return new Object[][]{
-            { null }, { "DE-de" }, { "EN-gb" }, { "DE-gb" }, { "FR-fr" }
-        };
+        return new Object[][]{ { null }, { "DE-de" }, { "EN-gb" }, { "DE-gb" }, { "FR-fr" } };
     }
 
     @DataProvider(name = "unacceptableValues")
     public Object[][] createUnacceptableValues()
     {
-        return new Object[][]{
-            { "foo" }, { "german" }, { "DE" }, { "de" }, { "DE-german" }
-        };
+        return new Object[][]{ { "foo" }, { "german" }, { "DE" }, { "de" }, { "DE-german" } };
     }
 
     @DataProvider
     private Object[][] acceptableListValues()
     {
-        return new Object[][]{
-            { null }, { ImmutableList.of("DE-de") }, { ImmutableList.of("DE-de", "DE-gb", "FR-fr") }
-        };
+        return new Object[][]{ { null }, { List.of("DE-de") }, { List.of("DE-de", "DE-gb", "FR-fr") } };
     }
 
     @DataProvider
     private Object[][] unacceptableListValues()
     {
-        return new Object[][]{
-            { ImmutableList.of("") }, { ImmutableList.of("foo") }, { ImmutableList.of("DE-de", "german") }
-        };
+        return new Object[][]{ { List.of("") }, { List.of("foo") }, { List.of("DE-de", "german") } };
     }
 
     @Test(dataProvider = "acceptableValues")
@@ -92,7 +82,7 @@ public class TestLanguageTagValueAnnotation
     @Test
     public void testHandlesWrongDataType()
     {
-        BeanValidation.assertUnacceptableValue(new WrongDataTypeList(ImmutableList.of(1, 5)),
+        BeanValidation.assertUnacceptableValue(new WrongDataTypeList(List.of(1, 5)),
             LanguageTagValue.class);
     }
 }
